# Rapter-Lang

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GITHUB_SETUP.md  LICENSE  QUICKSTART.md  RAPTER_CLI.md  README.md  install.ps1  rapter.bat  rapter.ps1  rapter.toml
bootstrap/: AST_TYPECHECKER_NOTES.md  BOOTSTRAP_PROGRESS.md  BOOTSTRAP_SUCCESS_REPORT.md  PARSER_V2_NOTES.md  QUALIFIED_TYPES_NOTES.md  QUICK_START_TOMORROW.md  QUICK_VICTORY.md  README.md  SESSION_ACHIEVEMENTS.md  TOMORROW_CHECKLIST.md  TOMORROW_PLAN.md  rapter_bootstrap.rapt  rapter_bootstrap_v1.rapt
bootstrap/src/: ast.rapt  ast_builder.rapt  ast_v2.rapt  codegen.rapt  codegen_old.rapt  codegen_simple.rapt  codegen_v2.rapt  compiler_main.rapt  lexer.rapt  lexer_simple.rapt  lexer_test.rapt  lexer_v2.rapt  lexer_v3.rapt  main.rapt  parser.rapt  parser_v2.rapt  test_lexer.rapt  token.rapt  token_enum.rapt  token_old.rapt  typechecker.rapt  unified_compiler.rapt  wrappers.rapt
examples/: README.md  fibonacci.rapt  hello.rapt  structs_demo.rapt
lib/: int_array.rapt  int_array_simple.rapt  string_ops.rapt
src/: ast.rs  builtins.rs  codegen.rs  error.rs  hello.rapt  hello_simple.rapt  intrinsics.rs  lexer.rs  lib.rs  main.rs  modules.rs  parser.rs  semantic.rs  test.rapt
src/std/: args.rapt  char.rapt  fs.rapt  io.rapt  str.rapt
tests/: README.md
